--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="./images.jpeg">
+    <img src="./image3.jpeg" alt="a picture of elephants">
+     <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a picture of a lion" title="Wecome to the jungle">
   </body>
 </html>
